# foodie

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  seed_data.json  wsgi.py
foodie/: __init__.py  db.py  models.py  seed.py
foodie/blueprints/: admin.py  auth.py  home.py  order.py  restaurant.py
foodie/blueprints/admin/: __init__.py  routes.py  services.py  utils.py
foodie/blueprints/auth/: __init__.py  routes.py  services.py  utils.py
foodie/blueprints/home/: __init__.py  routes.py
foodie/blueprints/order/: __init__.py  routes.py  services.py  utils.py
foodie/blueprints/restaurant/: __init__.py  routes.py  services.py  utils.py
foodie/templates/: base.html  home.html
foodie/templates/admin/: add_payment_method.html  dashboard.html  edit_payment_method.html  payment_methods.html
foodie/templates/auth/: login.html
foodie/templates/order/: checkout.html  edit.html  list.html  view.html
foodie/templates/restaurant/: list.html  view.html
