[project]
name = "foodie"
version = "0.1.0"
description = "Foodie is a food ordering application that enables businesses to manage resturants and the orders placed to resturants."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.44",
    "gunicorn>=21.2.0",
]
